[package]
name = "holepunch-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo"]}
inquire = "0.7.4"
rcgen = { version = "0.13.1", features = ["pem", "x509-parser"]}
rustls = "0.23.4"
xdg = "2.5.2"
