[package]
name = "holepunch-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare_proc = { path = "../bare_proc" }
clap = { version = "4.5", features = ["cargo"]}
inquire = "0.7"
kdl = "4.6"
log = "0.4.21"
pretty_env_logger = "0.5.0"
rcgen = { version = "0.13", features = ["pem", "x509-parser"]}
rustls = "0.23"
serde = { version = "1", features = ["derive"]}
serde_bare = "0.5.0"
xdg = "2.5"
